# ChangeLog for media-libs/zita-alsa-pcmi
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Apr 2013; Gavin Pryke (gavlee) <gavinlee303@googlemail.com>
  zita-alsa-pcmi-0.2.0.ebuild:
  test and add ~x86 keyword, keep repoman happy for media-sound/aliki

*zita-alsa-pcmi-0.2.0 (01 Nov 2012)

  01 Nov 2012; Gavin Pryke (gavlee) <gavinlee303@googlemail.com>
  +zita-alsa-pcmi-0.2.0.ebuild, +files/zita-alsa-pcmi-0.2.0-Makefile.patch,
  +metadata.xml:
  Import new ebuild thanks to Jannis Achstetter. Modified ebuild and added
  another patch to install files from apps directory.
