@@ -1,5 +1,5 @@
 AUX zita-alsa-pcmi-0.2.0-Makefile.patch 2616 SHA256 41dd258d83b457d133209c182509377a9e222bec64a7b6fa28dce7aa036f3cac SHA512 2ee4d9d3be5ff268f854f195e4895163fc530e349a568455c5bb7883990d4af1e09bfe4f8d8424219f476d3f8b9de70fd90396e5432f869efe91191958a96ce8 WHIRLPOOL cb6d35afa722e1386d19e4412ee613a9c01a7c5e1f17b3f81e1b45624bc7c4bf6e2ce6469faba5c6bc261998842f121e04a65ccd17b46e6b741cef063f97fb41
 DIST zita-alsa-pcmi-0.2.0.tar.bz2 21278 SHA256 491eaf9da24fb20b94723f8e75e2ea3a667fc53555b54d2acd390bf4c418fbe5 SHA512 6b521dc8bef96a6ee73bc2accd3c7d0641e9a4f3d955868cd3fe04ae46f15a1b1ffaa45d56518f54f4fdf9f68f629e3036dca294936015205c20f01d55338e96 WHIRLPOOL 2a2f577269f882f3d2bdc70294641742bc98ea3784b5e4e9fd973c802fe96564b2e4d35da24b3af41d413b446879c9b9c7358834f91aecc0111a6edf2cecdd62
-EBUILD zita-alsa-pcmi-0.2.0.ebuild 823 SHA256 d6610625bc666b907dd460cbee3bec2fa9e40d24c82ee1433810dc9738c3f6df SHA512 5c3d85b6cd2d4fcebca06eba08f1371bd1202b8cecadb2a9cb5bf2dc59a6aadd441019b3aaba4a8497d070daae53b21e15fd689992eaef4e45148bb000d53a79 WHIRLPOOL 702bcb965e38cf998b2b58f0ce16ae72b40dafaa3064d03db2a0cde4b8274d293669187307729320dfc7d94ca66d625149375ca85e78e5329cdf4872aded0fea
-MISC ChangeLog 618 SHA256 12d024f111540a7e281babdbf31c930e9c5c18bc4eab903ad2050d31b9a9fe03 SHA512 70a63a1a6458363d38aac25c9555fcbd61c6b9152f8506c6aaea813f4e4cba7f8a1d35b39409135e3aea92ee35bfd1dc2e555673da7621daa506f8f15208e06b WHIRLPOOL a20f08050297a6824100d8e8f88f7ad06172423ad269496a88819e068ec24773007e10ef21957bcd18b143009b94377da5c27afab7ba0084a2492dc63b0f941a
+EBUILD zita-alsa-pcmi-0.2.0.ebuild 839 SHA256 901074f8653592b4e00d7189ac754167f323d0f662ffe96e2ece83809c6e4dc5 SHA512 9a0aa0b21c6537d47593981b7d95bdabe2330378095d93304c1bd52f4061dfb87934a09521559461e3d8dea737252e95c20d93303f289f608fa5cd7f94825bcc WHIRLPOOL 7a31c99fdd2c7b94a111a7783f9908b9428341717098eb67817e10fbcb716d95f5411f6fcd583c62147f6117eb8b70bb5181962a7d857d217b568fe1b5c27736
+MISC ChangeLog 804 SHA256 06229d5449fb32a2a8c3b4b14efbc7517139e07c43a6c2cd932121b35c1445d7 SHA512 90011ab6df97a7b655fdcc8483749f7a88a53151319e9b4c27be8a88e2420432f49e38dfa945b33f943bf3e0141acc44f4f950dc77858069bce36e0e56cc9a7e WHIRLPOOL 3051103a25cf65111d5a27a5cdee162f9da09c638345ad182479db4e226c267d4f9d0e37a6367ba19062ad5cfed4a3ab0e45a0da7aa54391ed3c26610e707f50
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
