@@ -1,8 +1,8 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI=4
+EAPI=5
 inherit base toolchain-funcs multilib
 
 DESCRIPTION="Successor of clalsadrv. API providing easy access to ALSA PCM devices"
@@ -11,10 +11,11 @@ SRC_URI="http://kokkinizita.linuxaudio.org/linuxaudio/downloads/${P}.tar.bz2"
 
 LICENSE="GPL-3"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 ~ppc ~x86"
 IUSE=""
 
-DEPEND="media-libs/alsa-lib"
+RDEPEND="media-libs/alsa-lib"
+DEPEND="${RDEPEND}"
 
 RESTRICT="mirror"
 
@@ -24,16 +25,12 @@ PATCHES=("${FILESDIR}"/${P}-Makefile.patch)
 
 src_compile() {
 	tc-export CXX
-	cd libs
-	emake
-	cd ../apps
-	emake
+	emake -C libs
+	emake -C apps
 }
 
 src_install() {
-	cd libs
-	emake DESTDIR="${D}" LIBDIR="$(get_libdir)" PREFIX="${EPREFIX}/usr" install
-	cd ../apps
-	emake DESTDIR="${D}" PREFIX="${EPREFIX}/usr" install
+	emake -C libs DESTDIR="${D}" LIBDIR="$(get_libdir)" PREFIX="${EPREFIX}/usr" install
+	emake -C apps DESTDIR="${D}" PREFIX="${EPREFIX}/usr" install
 	base_src_install_docs
 }
